--- a/project-05/index.html
+++ b/project-05/index.html
@@ -3,215 +3,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project-04 / Light style guide</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+  <title>Project-05 / The Tea Cozy</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
-  <!-- Header section -->
+  <!-- header content -->
   <header>
-    <h1>Style guide—fundamentals</h1>
     <nav>
-      <ul>
-        <li class="header-nav--link"><p><a href="#intro">Introduction</a></p></li>
-        <li class="header-nav--link"><p><a href="#basics-typography">Typography</a></p></li>
-        <li class="header-nav--link"><p><a href="#basics-colour">Colours</a></p></li>
-        <!-- <li class="header-nav--link"><p><a href="#basics-layout">Layout</a></p></li> -->
+      <a class="nav-logo" href="#"><img src="img/img-tea-cozy-logo.png" alt="company logo"></a>
+      <ul class="nav-items">
+        <li><p><a href="">Mission</a></p></li>
+        <li><p><a href="">Featured Tea</a></p></li>
+        <li><p><a href="">Locations</a></p></li>
       </ul>
     </nav>
+    <div class="our-mission">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
   </header>
 
-  <!-- Main content -->
+  <!-- main content -->
   <main>
 
-    <!-- Introduction -->
-    <section class="intro" id="intro">
-      <h2>Introduction</h2>
-      <p>Welcome to this style guide, where you’ll find a concise overview of our design principles and visual standards. Whether you’re creating new content or updating existing elements, these guidelines will ensure consistency and clarity across our one-pager.</p>
-    </section>
-
-    <!-- Typography -->
-    <section class="basics-typography" id="basics-typography">
-      <h2>Typography</h2>
-      <p>We use the “<a href="https://rsms.me/inter/" target="_blank">Inter</a>” font family to achieve clean, readable text with modern flair, pairing appropriate weights and sizes for hierarchy. Here, you’ll see how headings, body copy, and semantic elements should be formatted to maintain typographic consistency. </p>
-
-      <!-- Typography variants -->
-      <div class="basics-typography--variants">
-        <p class="variant-title-xl">Title XL</p>
-        <ul>
-            <li><p><code>font-family: Inter;</code></p></li>
-            <li><p><code>font-size: 1.5rem;</code></p></li>
-            <li><p><code>font-style: normal;</code></p></li>
-            <li><p><code>line-height: 1.2;</code></p></li>
-            <li><p><code>letter-spacing: -0.24px;</code></p></li>
-        </ul>
-      </div>
-      <div class="basics-typography--variants">
-        <p class="variant-title-lg">Title LG</p>
-        <ul>
-            <li><p><code>font-family: Inter;</code></p></li>
-            <li><p><code>font-size: 1.25rem;</code></p></li>
-            <li><p><code>font-style: normal;</code></p></li>
-            <li><p><code>line-height: 1.2;</code></p></li>
-            <li><p><code>letter-spacing: -0.2px;</code></p></li>
-        </ul>
-      </div>
-      <div class="basics-typography--variants">
-        <p class="variant-title-md">Title MD</p>
-        <ul>
-            <li><p><code>font-family: Inter;</code></p></li>
-            <li><p><code>font-size: .8rem;</code></p></li>
-            <li><p><code>font-style: normal;</code></p></li>
-            <li><p><code>font-weight: 600;</code></p></li>
-            <li><p><code>line-height: 1.2;</code></p></li>
-        </ul>
-      </div>
-      <div class="basics-typography--variants">
-        <p class="variant-body">Body</p>
-        <ul>
-            <li><p><code>font-family: Inter;</code></p></li>
-            <li><p><code>font-size: .8rem;</code></p></li>
-            <li><p><code>font-style: normal;</code></p></li>
-            <li><p><code>font-weight: 400;</code></p></li>
-            <li><p><code>line-height: 1.2;</code></p></li>
-        </ul>
-      </div>
-      <div class="basics-typography--variants">
-        <p class="variant-body-heavy">Body heavy</p>
-        <ul>
-            <li><p><code>font-family: Inter;</code></p></li>
-            <li><p><code>font-size: .8rem;</code></p></li>
-            <li><p><code>font-style: normal;</code></p></li>
-            <li><p><code>font-weight: 600;</code></p></li>
-            <li><p><code>line-height: 1.2;</code></p></li>
-        </ul>
-      </div>
-
+    <!-- section — tea of the month -->
+    <section class="tea-of-the-mo">
+      <h2>Tea of the Month</h2>
+      <p>What's sleeping at The The Cozy?</p>
+      <ul class="tea-types">
+        <li>
+          <img src="img/img-berryblitz.jpg" alt="">
+          <h4>Fall Berry Blitz Tea</h4>
+        </li>
+        <li>
+          <img src="img/img-spiced-rum.jpg" alt="">
+          <h4>Spiced Rum Tea</h4>
+        </li>
+        <li>
+          <img src="img/img-donut.jpg" alt="">
+          <h4>Seasonal Donuts</h4>
+        </li>
+        <li>
+          <img src="img/img-myrtle-ave.jpg" alt="">
+          <h4>Myrtle Ave Tea</h4>
+        </li>
+        <li>
+          <img src="img/img-bedford-bizarre.jpg" alt="">
+          <h4>Bedford Bizarre Tea</h4>
+        </li>
       </ul>
     </section>
 
-    <!-- Colours -->
-    <section class="basics-colour" id="basics-colour">
-      <h2>Colours</h2>
-      <p>Our colour palette balances primary, secondary, and neutral tones to create an accessible and cohesive visual language. This section outlines each hue’s role and usage rules, ensuring that all text and background combinations meet contrast standards. </p>
+    <!-- section — locations -->
+     <section class="locations">
+      <h2>Locations</h2>
+      <ul class="locations--addresses">
+        <li>
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </li>
+        <li>
+          <h3>East Bayside</h3>
+          <p>3433 Phiserman's Avenue</p>
+          <p>(Northwest corner)</p>
+          <p>Portland, Maine</p>
+        </li>
+        <li>
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </li>
+      </ul>
+     </section>
 
-      <!-- Colour palettes -->
-      <div class="basics-colour--palette">
-        <h3>Neutral</h3>
-        <ul>
-          <li class="col-neutral-50">
-            <div class="col-example"></div>
-            <p><code>50</code></p>
-            <p><code>hsl(212, 2%, 97%)</code></p>
-          </li>
-          <li class="col-neutral-100">
-            <div class="col-example"></div>
-            <p><code>100</code></p>
-            <p><code>hsl(212, 2%, 85%)</code></p>
-          </li>
-          <li class="col-neutral-500">
-            <div class="col-example"></div>
-            <p><code>500</code></p>
-            <p><code>hsl(212, 2%, 45%)</code></p>
-          </li>
-          <li class="col-neutral-800">
-            <div class="col-example"></div>
-            <p><code>800</code></p>
-            <p><code>hsl(212, 2%, 20%)</code></p>
-          </li>
-          <li class="col-neutral-900">
-            <div class="col-example"></div>
-            <p><code>900</code></p>
-            <p><code>hsl(212, 2%, 10%)</code></p>
-          </li>
-        </ul>
-      </div>
-      <div class="basics-colour--palette">
-        <h3>Primary</h3>
-        <ul>
-          <li class="col-primary-50">
-            <div class="col-example"></div>
-            <p><code>50</code></p>
-            <p><code>hsl(167, 66%, 97%)</code></p>
-          </li>
-          <li class="col-primary-100">
-            <div class="col-example"></div>
-            <p><code>100</code></p>
-            <p><code>hsl(167, 66%, 85%)</code></p>
-          </li>
-          <li class="col-primary-500">
-            <div class="col-example"></div>
-            <p><code>500</code></p>
-            <p><code>hsl(167, 66%, 36%)</code></p>
-          </li>
-          <li class="col-primary-800">
-            <div class="col-example"></div>
-            <p><code>800</code></p>
-            <p><code>hsl(167, 66%, 20%)</code></p>
-          </li>
-          <li class="col-primary-900">
-            <div class="col-example"></div>
-            <p><code>900</code></p>
-            <p><code>hsl(167, 66%, 10%)</code></p>
-          </li>
-        </ul>
-      </div>
-      <div class="basics-colour--palette">
-        <h3>Secondary</h3>
-        <ul>
-          <li class="col-secondary-50">
-            <div class="col-example"></div>
-            <p><code>50</code></p>
-            <p><code>hsl(50, 90%, 95%)</code></p>
-          </li>
-          <li class="col-secondary-100">
-            <div class="col-example"></div>
-            <p><code>100</code></p>
-            <p><code>hsl(50, 90%, 85%)</code></p>
-          </li>
-          <li class="col-secondary-500">
-            <div class="col-example"></div>
-            <p><code>500</code></p>
-            <p><code>hsl(50, 90%, 45%)</code></p>
-          </li>
-          <li class="col-secondary-800">
-            <div class="col-example"></div>
-            <p><code>800</code></p>
-            <p><code>hsl(50, 90%, 20%)</code></p>
-          </li>
-          <li class="col-secondary-900">
-            <div class="col-example"></div>
-            <p><code>900</code></p>
-            <p><code>hsl(50, 90%, 10%)</code></p>
-          </li>
-        </ul>
-      </div>
-
-    </section>
-
-    <!-- Layout -->
-    <!-- <section class="basics-layout" id="basics-layout">
-      <h2>Layout</h2>
-      <p>The layout emphasizes a clear grid “anatomy” that structures content consistently, while its progressive responsiveness ensures every screen size adapts gracefully. By following these grid and responsiveness guidelines, your page will stay balanced and user-friendly from mobile to desktop.</p> -->
-      <!-- Layout anatomy -->
-      <!-- <div class="basics-layout--anatomy">
-        <h3>Anatomy</h3>
-      </div> -->
-
-      <!-- Layout progression -->
-      <!-- <div class="basics-layout--progression">
-        <h3>Progression</h3>
-      </div>
-    </section> -->
+    <!-- section — contacts -->
+     <section class="contacts">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+     </section>
     
   </main>
 
-  <!-- Footer -->
+  <!-- footer content -->
   <footer>
-    <p>June, 2025 // <a href="https://github.com/raigolilleberg" target="_blank">Raigo</a></p>
+    <p>copyright The Tea Cozy 2017</p>
+    <div class="footer-raigo">
+      <p>raigo lilleberg · june, 2025 · <a href="https://github.com/raigolilleberg/codecademy-front-end" target="_blank">project-05</a> · <a href="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-redline.jpg?_gl=1*d3y6be*_gcl_au*MTAwMTE2MzgwOS4xNzQ3NzYyNDUzLjExNTk0OTA5MTYuMTc0OTg5NjE2OC4xNzQ5ODk2MTc2*_ga*NDQ5NDYxOTgwNi4xNzM5NjU1NDM5*_ga_3LRZM6TM9L*czE3NTAzMjIyNTEkbzMkZzEkdDE3NTAzMjY2OTYkajU3JGwwJGgw" target="_blank">brief</a></p>
+    </div>
   </footer>
 
 </body>
