updated project-05 files

--- a/project-05/index.html
+++ b/project-05/index.html
@@ -13,12 +13,12 @@
     <nav>
       <a class="nav-logo" href="#"><img src="img/img-tea-cozy-logo.png" alt="company logo"></a>
       <ul class="nav-items">
-        <li><p><a href="">Mission</a></p></li>
-        <li><p><a href="">Featured Tea</a></p></li>
-        <li><p><a href="">Locations</a></p></li>
+        <li><p><a href="#mission">Mission</a></p></li>
+        <li><p><a href="#feat-tea">Featured Tea</a></p></li>
+        <li><p><a href="#locations">Locations</a></p></li>
       </ul>
     </nav>
-    <div class="our-mission">
+    <div class="our-mission" id="mission">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
@@ -28,7 +28,7 @@
   <main>
 
     <!-- section — tea of the month -->
-    <section class="tea-of-the-mo">
+    <section class="tea-of-the-mo" id="feat-tea">
       <h2>Tea of the Month</h2>
       <p>What's sleeping at The The Cozy?</p>
       <ul class="tea-types">
@@ -56,7 +56,7 @@
     </section>
 
     <!-- section — locations -->
-     <section class="locations">
+     <section class="locations" id="locations">
       <h2>Locations</h2>
       <ul class="locations--addresses">
         <li>
